--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-# Data analysis and visualization
+# Core dependencies
 numpy==1.26.0
 pandas==2.1.3
 matplotlib==3.10.6
+PyYAML==6.0.2
 
 # Natural Language Processing (NLP)
 nltk==3.9.1
@@ -10,3 +11,5 @@ gensim==4.3.3
 # Machine learning
 scikit-learn==1.6.1
 
+# Kaggle API
+kaggle==1.6.17
