--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 # Core dependencies
-numpy==1.26.0
-pandas==2.1.3
-matplotlib==3.10.6
-PyYAML==6.0.2
+numpy>=1.26,<2.0
+pandas>=2.1,<3.0
+matplotlib>=3.10,<4.0
+PyYAML>=6.0,<7.0
 
 # Natural Language Processing (NLP)
-nltk==3.9.1
-gensim==4.3.3
+nltk>=3.9,<4.0
+gensim>=4.3,<5.0
 
 # Machine learning
-scikit-learn==1.6.1
+scikit-learn>=1.6,<2.0
 
 # Kaggle API
-kaggle==1.6.17
+kaggle>=1.6,<2.0
+
+# Utilities
+bleach>=6.2,<7.0
+certifi>=2025.1,<2026.0
+charset-normal
+
