--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,38 @@
 # Core dependencies
-numpy>=1.26,<2.0
-pandas>=2.1,<3.0
-matplotlib>=3.10,<4.0
-PyYAML>=6.0,<7.0
+numpy==1.26.0
+pandas==2.1.3
+matplotlib==3.10.6
+PyYAML==6.0.2
 
 # Natural Language Processing (NLP)
-nltk>=3.9,<4.0
-gensim>=4.3,<5.0
+nltk==3.9.1
+gensim==4.3.3
 
 # Machine learning
-scikit-learn>=1.6,<2.0
+scikit-learn==1.6.1
+scipy==1.15.2
+joblib==1.4.2
+threadpoolctl==3.5.0
 
 # Kaggle API
-kaggle>=1.6,<2.0
+kaggle==1.6.17
+
+# HTTP & Requests
+requests==2.32.3
+urllib3==2.3.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+idna==3.10
+click==8.1.8
+
+# Utilities
+six==1.17.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-slugify==8.0.4
+text-unidecode==1.3
+regex==2024.11.6
+bleach==6.2.0
+tqdm==4.67.1
+tzdata==2025.1
+webencodings==0.5.1
