--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ gensim==4.3.3
 
 # Machine learning
 scikit-learn==1.6.1
-scipy==1.15.2
+scipy>=1.7.0,<1.14.0
 joblib==1.4.2
 threadpoolctl==3.5.0
 
